# libcpuid

./: CMakeLists.txt
debian/: manpage.1
libcpuid/: asm-bits.c  asm-bits.h  cpuid_main.c  libcpuid.h
